--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <title>Dulces secretos: sex shop</title>
       <!-- BOOTSTRAP CDN -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
       <!--  -->
       <link rel="stylesheet" href="./style.css">     
       <!-- FUENTES -->
@@ -155,13 +156,50 @@
           </div>
           <!-- TEXTO DE INTRODUCCIÓN -->
           <div class="intro">
-              <h1 class="text-center">¡Bienvenidos a la tienda más divertida del placer!</h1>
-              <h5 class="text-center">Saludos a todos y todas, hoy les presentamos un lugar donde la diversión y el placer se encuentran. ¡Bienvenidos a Dulces Secretos!</h5>
+              <h1 class="text-center intro" >¡Bienvenidos a la tienda más divertida del placer!</h1>
+              <h5 class="text-center intro" >Saludos a todos y todas, hoy les presentamos un lugar donde la diversión y el placer se encuentran. ¡Bienvenidos a Dulces Secretos!</h5>
           </div>
           <!--  -->
+          <!-- BOTON WP -->
+          <a href="https://api.whatsapp.com/send?phone=541166314435" class="btn-wsp" target="_blank">
+            <i class="bi-whatsapp fs-1" ></i>
+          </a>
+          <!--  -->
       </main>
-      <footer>
-          
+      <footer id="contact">
+        <div id="footer">
+          <div class="container px-4 px-lg-5">
+            <h2 class="section-heading text-uppercase text-center">Información</h2>
+              <hr class="divider" />
+              <div class="row gx-4 gx-lg-5" id="acomodar">
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                    <a href="https://www.instagram.com/dulces.secretos1/"><div class="mb-2"><i class="bi-instagram fs-1 text-primary"></i></div></a>
+                    <h3 class="h4 mb-2">Instagram</h3>
+                    <p class="text-muted mb-0">dulces.secretos1</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <div class="mb-2"><i class="bi-map fs-1 text-primary"></i></div>
+                    <h3 class="h4 mb-2">Ubicación</h3>
+                    <p class="text-muted mb-0">BS AS</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="mt-5">
+                    <div class="mb-2"><i class="bi-phone fs-1 text-primary"></i></div>
+                    <h3 class="h4 mb-2">Contacto</h3>
+                    <p class="text-muted mb-0">1166314435</p>
+                </div>
+            </div>
+        </div>
+    </div>
+              <div  id="piePagina">               
+              <div class="small ">Copyright &copy; 2023 - DULCES SECRETOS</div>   
+              <div ><a href="https://www.instagram.com/stuffwebb/" class="text-muted" id="link">Sitio elaborado por<img id="logo" src="./assets/stuff.png" alt="logo de creador de sitio" width="30" height="30" ></div></a>
+            </div>
+        </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
