--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                       <input class="form-control me-2" type="search" placeholder="Producto..." aria-label="Search">
                       <button class="btn btn-outline-success" type="submit">Buscar</button>
                   </form>
-                  <img src="./assets/carrito.svg" alt="carrito" class="carrito">
+                  <div class="carrito">
+                    0
+                    <img src="./assets/carrito.svg" alt="carrito">
+                  </div>
                 </div>
               </div>
         </nav>
