--- a/index.html
+++ b/index.html
@@ -162,7 +162,13 @@
           <div class="intro">
               <h1 class="text-center intro" >¡Bienvenidos a la tienda más divertida del placer!</h1>
               <h5 class="text-center intro" >Saludos a todos y todas, hoy les presentamos un lugar donde la diversión y el placer se encuentran. ¡Bienvenidos a Dulces Secretos!</h5>
+          </div>    
+          <div class="text-center contenedor">
+            <img src="./assets/mariposa.png" alt="mariposa" class="logom">
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/s6GtHxX00t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <img src="./assets/mariposa.png" alt="mariposa" class="logom">
           </div>
+          
           <!--  -->
           <!-- BOTON WP -->
           <a href="https://api.whatsapp.com/send?phone=541166314435" class="btn-wsp" target="_blank">
