--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
           <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
+                   <img src="./assets/21.png" class="d-block w-100" alt="juguetes sexuales">
+                  </div>
+                  <div class="carousel-item active" data-bs-interval="10000">
                     <img src="./assets/4.jpg" class="d-block w-100" alt="juguetes sexuales">
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
@@ -159,10 +162,10 @@
               <!--  -->
           </div>
           <!-- TEXTO DE INTRODUCCIÓN -->
-          <div class="intro">
+          <!-- <div class="intro">
               <h1 class="text-center intro" >¡Bienvenidos a la tienda más divertida del placer!</h1>
               <h5 class="text-center intro" >Saludos a todos y todas, hoy les presentamos un lugar donde la diversión y el placer se encuentran. ¡Bienvenidos a Dulces Secretos!</h5>
-          </div>    
+          </div>     -->
           <div class="text-center contenedor">
             <img src="./assets/mariposa.png" alt="mariposa" class="logom">
             <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/s6GtHxX00t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
