--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div> 
         <!--  -->
         <!-- BARRA NAVEGACIÓN (CATEGORIAS, BUSCADOR Y CARRITO)-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-              <div class="container-fluid">
+        <nav class="navegacion navbar navbar-expand-lg bg-body-tertiary ">
+              <div class="">
                   <a class="navbar-brand" href="#"></a>
                   <button class="navbar-toggler boton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -118,15 +118,17 @@
                       </ul>
                     </li>
                   </ul>
-                  <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Producto..." aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Buscar</button>
-                  </form>
-                  <div class="carrito">
-                    0
-                    <img src="./assets/carrito.svg" alt="carrito">
-                  </div>
                 </div>
+              </div>
+              <div>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Producto..." aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+              </div>
+              <div class="carrito">
+                0
+                <img src="./assets/carrito.svg" alt="carrito">
               </div>
         </nav>
               <!--  -->
@@ -138,17 +140,14 @@
                   <div class="carousel-item active" data-bs-interval="10000">
                    <img src="./assets/21.png" class="d-block w-100" alt="juguetes sexuales">
                   </div>
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./assets/4.jpg" class="d-block w-100" alt="juguetes sexuales">
-                  </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/1.jpg" class="d-block w-100" alt="juguetes sexuales">
+                    <img src="./assets/4.jpg" class="d-block w-100" alt="juguetes sexuales">
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
                     <img src="./assets/20.jpg" class="d-block w-100" alt="juguetes sexuales">
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/3.jpg" class="d-block w-100" alt="juguetes sexuales">
+                    <img src="./assets/1.jpg" class="d-block w-100" alt="juguetes sexuales">
                   </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
