--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--  -->
         <!-- BARRA NAVEGACIÓN (CATEGORIAS, BUSCADOR Y CARRITO)-->
         <nav class="navegacion navbar navbar-expand-lg bg-body-tertiary ">
-              <div class="">
+              <div class="navv">
                   <a class="navbar-brand" href="#"></a>
                   <button class="navbar-toggler boton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
