boton de menu sacado(comentado)

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <!-- BARRA NAVEGACIÓN (CATEGORIAS, BUSCADOR Y CARRITO)-->
         <nav class="navegacion navbar navbar-expand-lg bg-body-tertiary ">
               <div class="navv">
-                  <a class="navbar-brand" href="#"></a>
+                  <!-- <a class="navbar-brand" href="#"></a>
                   <button class="navbar-toggler boton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                  </button> -->
+                <!-- <div class="collapse navbar-collapse " id="navbarSupportedContent"> -->
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -118,7 +118,7 @@
                       </ul>
                     </li>
                   </ul>
-                </div>
+                <!-- </div> -->
               </div>
               <div>
                 <form class="d-flex" role="search">
