cambie cosas en header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <header>
         <!-- PRIMERA PARTE DE HEADER (LOGO Y BOTONES DE INICIO DE SESIÓN) -->
         <div class="inicio">
-            <a href="./index.html"><img src="./assets/logo.jpeg" alt="logo de dulce secretos" class="logo1"  id="logo"></a>
+            <a href="./index.html"><img src="./assets/logoSinFondo2.png" alt="logo de dulce secretos" class="logo1"  id="logo"></a>
             <div class="botones">
                 <button class="button"> 
                     <img src="./assets/inicioSesion.svg" alt="logo inicio sesion" class="sesion"> Iniciar sesión
