--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
             <a href="./index.html"><img src="./assets/logoSinFondo2.png" alt="logo de dulce secretos" class="logo1"  id="logo"></a>
             <div class="botones">
                 <button class="button"> 
-                    <img src="./assets/inicioSesion.svg" alt="logo inicio sesion" class="sesion"> Iniciar sesión
+                  <div class="button2">
+                    <ion-icon name="person-outline"></ion-icon>
+                    Iniciar sesión
+                  </div>
+                  
                     <span></span>
                 </button>
                 <button class="button"> 
-                    <img src="./assets/registrarse.svg" alt="logo registrarse" class="sesion"> Registrarse
+                  <div class="button2">
+                    <ion-icon name="person-add-outline">Registrarse</ion-icon> 
+                    Registrarse
+                  </div>
+                  
                     <span></span>
                 </button>
             </div>  
@@ -186,21 +194,21 @@
               <div class="row gx-4 gx-lg-5" id="acomodar">
                 <div class="col-lg-3 col-md-6 text-center">
                   <div class="mt-5">
-                    <a href="https://www.instagram.com/dulces.secretos1/"><div class="mb-2"><i class="bi-instagram fs-1 text-primary"></i></div></a>
+                    <a href="https://www.instagram.com/dulces.secretos1/"><div class="mb-2"><i class="bi-instagram fs-1 blanco"></i></div></a>
                     <h3 class="h4 mb-2">Instagram</h3>
                     <p class="text-muted mb-0">dulces.secretos1</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="mt-5">
-                    <div class="mb-2"><i class="bi-map fs-1 text-primary"></i></div>
+                    <div class="mb-2"><i class="bi-map fs-1 blanco"></i></div>
                     <h3 class="h4 mb-2">Ubicación</h3>
                     <p class="text-muted mb-0">BS AS</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="mt-5">
-                    <div class="mb-2"><i class="bi-phone fs-1 text-primary"></i></div>
+                    <div class="mb-2"><i class="bi-phone fs-1 blanco"></i></div>
                     <h3 class="h4 mb-2">Contacto</h3>
                     <p class="text-muted mb-0">1166314435</p>
                 </div>
@@ -214,5 +222,7 @@
         </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
