--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
                 <div class="card2-img"><img src="./assets/vvibrador.jpg" class="producto" alt=""></div>
                   <div class="card2-info">
                     <p class="text-title">Pret-A-Porter </p>
-                    <!-- <p class="text-body">bi-14442 vibrador dempsey inflable usb recargable 25cm x 4cm</p> -->
                   </div>
                   <div class="card2-footer">
                   <span class="text-title">$499.49</span>
@@ -210,8 +209,7 @@
                <div class="card2">
                 <div class="card2-img"><img src="./assets/vperfume.jpg" class="producto" alt=""></div>
                   <div class="card2-info">
-                    <p class="text-title">Perfume Afrodisiaco Hot Inevitable </p>
-                    <!-- <p class="text-body">bi-14442 vibrador dempsey inflable usb recargable 25cm x 4cm</p> -->
+                    <p class="text-title">Perfume Hot Inevitable </p>
                   </div>
                   <div class="card2-footer">
                   <span class="text-title">$499.49</span>
@@ -228,7 +226,6 @@
                 <div class="card2-img"><img src="./assets/vbodysplah.jpg" class="producto" alt=""></div>
                   <div class="card2-info">
                     <p class="text-title">Body Splash Love </p>
-                    <!-- <p class="text-body">bi-14442 vibrador dempsey inflable usb recargable 25cm x 4cm</p> -->
                   </div>
                   <div class="card2-footer">
                   <span class="text-title">$499.49</span>
@@ -245,7 +242,6 @@
                 <div class="card2-img"><img src="./assets/vibrador.jpg" class="producto" alt=""></div>
                   <div class="card2-info">
                     <p class="text-title">Vibrador </p>
-                    <!-- <p class="text-body">bi-14442 vibrador dempsey inflable usb recargable 25cm x 4cm</p> -->
                   </div>
                   <div class="card2-footer">
                   <span class="text-title">$499.49</span>
